--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,13 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=EB+Garamond:400,400i,700&display=swap');
 
 
-body{
-    background-color: rgb(0,0,0, 0.9);
-    margin: 0;
-    color: #fff;
-    font-family: 'EB Garamond', serif;
+body {
+  background: rgba(0, 0, 0, 0.9);
+  margin: 0;
+  color: #fff;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
-.showcase::after{
+
+.showcase::after {
   content: '';
   height: 100vh;
   width: 100%;
@@ -26,19 +27,120 @@ body{
   -webkit-filter: blur(0px);
 }
 
+.showcase:hover .content {
+  filter: blur(2px);
+  -webkit-filter: blur(2px);
+}
+
 .content {
-
+  position: absolute;
+  z-index: 1;
+  top: 10%;
+  left: 50%;
+  margin-top: 105px;
+  margin-left: -145px;
+  width: 300px;
+  height: 350px;
+  text-align: center;
+  transition: all 1000ms;
 }
 
- .logo{
-height: 180px;
-width: 180px;
+.content .logo {
+  height: 180px;
+  width: 180px;
 }
 
- .title {
-
+.content .title {
+  font-size: 2.2rem;
+  margin-top: 1rem;
 }
 
-.text {
+.content .text {
+  line-height: 1.7;
+  margin-top: 1rem;
+}
 
+.container {
+  max-width: 960px;
+  margin: auto;
+  overflow: hidden;
+  padding: 4rem 1rem;
+}
+
+.grid-3 {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(3, 1fr);
+}
+
+.grid-2 {
+  display: grid;
+  grid-gap: 20px;
+  grid-template-columns: repeat(2, 1fr);
+}
+
+.center {
+  text-align: center;
+  margin: auto;
+}
+
+.bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-dark {
+  background: #333;
+  color: #f4f4f4;
+}
+
+footer {
+  padding: 2.2rem;
+}
+
+footer p {
+  margin: 0;
+}
+
+/* Small Screens */
+@media (max-width: 560px) {
+  .showcase::after {
+    height: 50vh;
+  }
+
+  .content {
+    top: 5%;
+    margin-top: 5px;
+  }
+
+  .content .logo {
+    height: 140px;
+    width: 140px;
+  }
+
+  .content .text {
+    display: none;
+  }
+
+  .grid-3,
+  .grid-2 {
+    grid-template-columns: 1fr;
+  }
+
+  .services div {
+    border-bottom: #333 dashed 1px;
+    padding: 1.2rem 1rem;
+  }
+}
+
+/* Landscape */
+@media (max-height: 500px) {
+  .content .title,
+  .content .text {
+    display: none;
+  }
+
+  .content {
+    top: 0;
+  }
 }
